    syslog and control socket support, also patch systemd service file
  * drop 09_dbus_emit_change_events.patch, applied upstream.
  * fix ftbfs with gcc/g++ 4.7 (Closes: 667416)
  * unfortunately, hostapd package historically added an epoch, so an epoch
    must now be added to this source package too.
  * enable hardened build flags. (Closes: #657332)

 -- Kel Modderman <kel@otaku42.de>  Mon, 09 Apr 2012 07:48:11 +1000

wpasupplicant (0.7.3-6) unstable; urgency=low

  * add "hostap: Allow linking with libnl-3" from Ben Greear 
    <greearb@candelatech.com> to allow building against libnl3 3.2.
  * raise versioned build-dependency to (>= 3.2.3-2~), we need
    libnl-genl-3-200-udeb and expect it in /lib/.
  * switch build dependency from libnl3-dev to libnl-3-dev && libnl-genl-3-dev
    accordingly.
  * symlink /usr/share/doc/wpasupplicant/ to /usr/share/doc/wpa_supplicant,
    which is referred to from upstream documentation (Closes: #537375,
    #616120).
  * enable BGSCAN_SIMPLE (Closes: #650834).
  * add "For MS-CHAP, convert the password from UTF-8 to UCS-2" from
    Evan Broder <ebroder@mokafive.com>, accepted upstream into hostap-1.git
    (Closes: #649202).

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 19 Dec 2011 23:31:20 +0100

wpasupplicant (0.7.3-5) unstable; urgency=low

  * restrict wpasupplicant-udeb to linux-any, until a udeb for libpcap0.8 gets
    available for kfreebsd-any (Closes: #644823).
  * build-depend on libncurses5-dev explicitly, as it is no longer pulled in
    indirectly.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 14 Oct 2011 10:35:42 +0200

wpasupplicant (0.7.3-4) unstable; urgency=low

  [ Kel Modderman ]
  * Support /run/sendsigs.omit.d/ (Closes: #633040):
    - depend on initscripts (>= 2.88dsf-13.3)
    - create new omission pid files in /run/sendsigs.omit.d/ unconditionally
    - migrate existing omission pid files from /lib/init/rw/ to
      /run/sendsigs.omit.d/
  * ACK NMU (Closes: #610931)