@@ -43,8 +43,10 @@ wpa (1:1.0~rc2-1) UNRELEASED; urgency=low
   * unfortunately, hostapd package historically added an epoch, so an epoch
     must now be added to this source package too.
   * enable hardened build flags. (Closes: #657332)
+  * remove DEB_BUILD_OPTIONS=noopt handling from debian/rules, no longer
+    required since dpkg-buildflags honors it.
 
- -- Kel Modderman <kel@otaku42.de>  Mon, 09 Apr 2012 07:48:11 +1000
+ -- Kel Modderman <kel@otaku42.de>  Mon, 09 Apr 2012 07:56:19 +1000
 
 wpasupplicant (0.7.3-6) unstable; urgency=low
 
